chore: exclude *.pyc files

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,3 @@
-todo_website/db.sqlite3
-todo_website/todo_website/settings.py
+*.pyc
+/todo_website/db.sqlite3
+/todo_website/todo_website/settings.py
