--- a/todo_website/todo_crud/fixtures/demo.yaml
+++ b/todo_website/todo_crud/fixtures/demo.yaml
@@ -3,13 +3,16 @@
   fields:
     title: One-two, one-two, this is a test
     done: false
+    description: Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
 - model: todo_crud.todo
   pk: 2
   fields:
     title: Add README file
     done: true
+    description: 123
 - model: todo_crud.todo
   pk: 3
   fields:
     title: Destroy the world and kill all humans
     done: false
+    description: 456
